# newsletter-frontend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  next.config.ts  nginx.conf  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
app/: layout.tsx
app/login/: page.tsx
app/newsletter/: page.tsx
app/pricing/: page.tsx
app/product/: page.tsx
backend/: alembic.ini  config.py  containers.py  database.py  database_models.py  main.py
backend/common/: auth.py  task.py
backend/domain/repository/: user_repo.py
backend/jwt/application/: jwt_service.py
backend/jwt/infra/: jwt_decoder.py
backend/migrations/versions/: 2025_01_04_1630-25f28a7cea2e_add_user_table.py  2025_01_05_1732-35ac198c3c80_add_newsletter_schema.py  2025_01_05_1801-4452c64b2c78_edit_newsletters_table.py  2025_01_06_0100-a55f58e4e41b_delete_foreignkey_userkey_in_newsletters.py  2025_01_06_0102-f019b21b7fa3_users_table.py  2025_01_07_1440-e148328a3301_delete_name_colum_in_source_table.py  2025_01_07_1457-086b24dcfc46_new_base_class.py  2025_01_07_1626-87eec36ad8cc_new_base_class.py  2025_02_05_0019-31db0e6ac558_create_newsletter_subscribers_table.py  2025_02_05_0023-20ed80b8c835_create_newsletter_subscribers_table.py
backend/news/application/: news_service.py
backend/news/domain/: news.py
backend/newsletter/graph/: prompts.py
backend/user/application/: user_service.py
backend/user/domain/: user.py
backend/utils/: db_utils.py
frontend/: .env.example  .yarnrc.yml  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: navbar.tsx  theme-switch.tsx
frontend/src/icons/: index.ts
frontend/src/styles/: primitives.ts
newsletter/: newsletter_generator.py
newsletter/graph/: graph.py  state.py
newsletter/graph/nodes/: creator.py
src/app/: actions.ts  globals.css  layout.tsx  page.tsx
src/app/(home)/: page.tsx
src/app/create-newsletter/: actions.ts  page.tsx
src/app/layouts/: root.tsx
src/app/login/: page.tsx
src/app/newsletter/: page.tsx
src/app/pricing/: page.tsx
src/app/providers/: theme.tsx
src/components/: navbar.tsx  theme-switch.tsx
src/components/profile/: profile-info.tsx
src/entities/: archive.d.ts  newletter.d.ts  subscriber.d.ts  user.d.ts
src/entities/newsletter/: index.ts  (+2 more)
src/features/: navbar.tsx  theme-switch.tsx
src/icons/: chevron-down.tsx  envelope.tsx  index.ts  plus.tsx  search.tsx
src/providers/: subscriber-provider.tsx
src/styles/: primitives.ts
(+218 files in other folders)
